--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
     "ios": {
       "supportsTablet": true,
       "config": {
-        "googleMapsApiKey": AIzaSyBqrMy6b5q4er0bY5bbK_8qPWnYaRdE-L4
+        "googleMapsApiKey": "AIzaSyBqrMy6b5q4er0bY5bbK_8qPWnYaRdE-L4"
       }
     },
     
@@ -31,7 +31,7 @@
       "predictiveBackGestureEnabled": false,
       "config": {
         "googleMaps": {
-          "apiKey": AIzaSyBqrMy6b5q4er0bY5bbK_8qPWnYaRdE-L4
+          "apiKey": "AIzaSyBqrMy6b5q4er0bY5bbK_8qPWnYaRdE-L4"
         }
       }
     },
