--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.1",
+    "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.23",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-maps": "1.20.1",
+    "react-native-web": "^0.21.0",
+    "react-native-web-maps": "^0.3.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "typescript": "~5.9.2"
   },
   "private": true
